src/test/ui/parser/import-glob-path.stderr
error: expected `;`, found `::`
  --> $DIR/import-glob-path.rs:2:11
   |
LL | use foo::*::bar
   |           ^^ expected `;` here

error: aborting due to previous error

