src/test/ui/parser/import-glob-path.rs
// error-pattern:expected
use foo::*::bar
